tests/baselines/reference/esDecorators-classDeclaration-exportModifier.2.errors.txt
tests/cases/conformance/esDecorators/classDeclaration/file3.ts(2,8): error TS1206: Decorators are not valid here.
tests/cases/conformance/esDecorators/classDeclaration/file6.ts(2,13): error TS8038: Decorators may not appear after 'export' or 'export default' if they also appear before 'export'.
tests/cases/conformance/esDecorators/classDeclaration/file7.ts(2,21): error TS8038: Decorators may not appear after 'export' or 'export default' if they also appear before 'export'.


==== tests/cases/conformance/esDecorators/classDeclaration/global.ts (0 errors) ====
    /** @type {*} */
    var dec;
    
==== tests/cases/conformance/esDecorators/classDeclaration/file1.ts (0 errors) ====
    // ok
    @dec export class C1 { }
    
==== tests/cases/conformance/esDecorators/classDeclaration/file2.ts (0 errors) ====
    // ok
    @dec export default class C2 {}
    
==== tests/cases/conformance/esDecorators/classDeclaration/file3.ts (1 errors) ====
    // error
    export @dec default class C3 {}
           ~~~~
!!! error TS1206: Decorators are not valid here.
    
==== tests/cases/conformance/esDecorators/classDeclaration/file4.ts (0 errors) ====
    // ok
    export @dec class C4 {}
    
==== tests/cases/conformance/esDecorators/classDeclaration/file5.ts (0 errors) ====
    // ok
    export default @dec class C5 {}
    
==== tests/cases/conformance/esDecorators/classDeclaration/file6.ts (1 errors) ====
    // error
    @dec export @dec class C6 {}
                ~~~~
!!! error TS8038: Decorators may not appear after 'export' or 'export default' if they also appear before 'export'.
!!! related TS1486 tests/cases/conformance/esDecorators/classDeclaration/file6.ts:2:1: Decorator used before 'export' here.
    
==== tests/cases/conformance/esDecorators/classDeclaration/file7.ts (1 errors) ====
    // error
    @dec export default @dec class C7 {}
                        ~~~~
!!! error TS8038: Decorators may not appear after 'export' or 'export default' if they also appear before 'export'.
!!! related TS1486 tests/cases/conformance/esDecorators/classDeclaration/file7.ts:2:1: Decorator used before 'export' here.
    